// Copyright 2022 The ChromiumOS Authors.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.autoupdate;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/autoupdate";

// UpdateUIService holds a Chrome instance and can be used to control update-relevant UI features
// such as restarting for update.
service UpdateUIService {
  rpc New (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc RelaunchAfterUpdate (google.protobuf.Empty) returns (google.protobuf.Empty) {}
}